--- a/src/styles/Avatar.css
+++ b/src/styles/Avatar.css
@@ -17,10 +17,8 @@
 }
 
 .profile-image {
-  /* width: 2em;
-  height: 2em; */
-  height: 25%;
-  width: 25%;
+  width: 2em;
+  height: 2em;
   border-radius: 50%;
   object-fit: cover;
   border: 2px solid #e0e0e0;
